Signed-off-by: Eslam abselnasser <96479431+imsemoo@users.noreply.github.com>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1175,6 +1175,11 @@ body.is-menu-open {
 
   .hero {
     border-radius: 0 0 var(--radius-lg);
+    padding-top: var(--space-4);
+  }
+
+  .media-center {
+    padding-bottom: 0;
   }
 
   .hero-actions {
