Signed-off-by: Eslam abselnasser <96479431+imsemoo@users.noreply.github.com>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -491,12 +491,16 @@ body.is-menu-open {
 
 @media (max-width: 420px) {
   .brand img {
-    width: 170px;
+    width: 140px;
   }
 
   .landing-share-btn {
     padding: 0.7rem 1.1rem;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
+  }
+
+  .header-inner {
+    padding: 0;
   }
 }
 
